[package]
name = "example"
edition = "2021"
version = "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-interop = {path = "../yew-interop", features=["script", "yew-next"]}
yew = {git="https://github.com/yewstack/yew.git", branch="master"}
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo-console = "0.2"
stylist = { git="https://github.com/futursolo/stylist-rs.git", features=["yew_integration"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "HtmlImageElement"
]