[package]
name = "example"
edition = "2021"
version = "0.0.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-interop = {path = "../yew-interop", features=["script", "yew-stable"]}
yew = "0.19"
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo-console = "0.2"
stylist = {version="0.10", features=["yew_integration"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "HtmlImageElement"
]