[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-interop = {path = "../yew-interop"}
yew_master = {package="yew", git="https://github.com/yewstack/yew.git", branch="master", optional=true}
yew_19 = {package="yew", version="0.19", optional=true}


[features]
yew-next = ["yew_master", "yew-interop/yew-next"]
yew-stable = ["yew_19", "yew-interop/yew-stable"]
script = ["yew-interop/script"]
