[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# remove on release
yew_master = {package="yew", git="https://github.com/yewstack/yew.git", branch="master", optional=true}
# fix on release
yew_19 = {package="yew", version="0.19", optional=true}
yew-interop = {path = "../yew-interop"}
[features]
# remove on release
yew-stable = ["yew_19", "yew-interop/yew-stable"]
# remove on release
yew-next = ["yew_master", "yew-interop/yew-next"]
script = ["yew-interop/script"]
