[package]
name = "yew-interop-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "shared crate for yew-interop"
homepage = "https://github.com/Madoshakalaka/yew-interop"
repository = "https://github.com/Madoshakalaka/yew-interop"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
