[package]
name = "yew-interop-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "macros for the yew-interop crate"
homepage = "https://github.com/Madoshakalaka/yew-interop"
repository = "https://github.com/Madoshakalaka/yew-interop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
yew-interop-core = {path = "../yew-interop-core" }
url = "2.2"


[features]
script = []