[package]
name = "yew-interop-macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "macros for the yew-interop crate"
homepage = "https://github.com/Madoshakalaka/yew-interop"
repository = "https://github.com/Madoshakalaka/yew-interop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
# comment me out on release
yew-interop-core = {path = "../yew-interop-core" }
# uncomment me on release
# yew-interop-core = "x.y"
url = "2.2"


[features]
script = []
# remove me on release
yew-stable = []
# remove me on release
yew-next = []

[dev-dependencies]
yew = "0.19"
# remove yew-stable on release
yew-interop = {path = "../yew-interop", features = ["yew-stable", "script"]}