[package]
name = "yew-interop"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "use javascript and css asynchrously in yew"
homepage = "https://github.com/Madoshakalaka/yew-interop"
repository = "https://github.com/Madoshakalaka/yew-interop"
readme = "../README.md"

keywords = ["yew", "interop", "js", "css", "npm"]
categories = ["api-bindings", "asynchronous", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# comment me out on release
yew-interop-macro = {path = "../yew-interop-macro" }
# uncomment me on release
# yew-interop-macro = "x.y"

# comment me out on release
yew-interop-core = {path = "../yew-interop-core" }
# uncomment me on release
# yew-interop-core = "x.y"

# remove me on release
yew_master = {package="yew", git="https://github.com/yewstack/yew.git", branch="master", optional=true}
# change yew_19 to just yew, remove optional, fix version to latestest yew on release
yew_19 = {package="yew", version="0.19", optional=true}
wasm-bindgen = {version="0.2", optional=true}
js-sys = {version="0.3", optional=true}
wasm-bindgen-futures = {version="0.4", optional=true}

[dev-dependencies]
# remove on release
yew_master = {package="yew", git="https://github.com/yewstack/yew.git", branch="master"}
# change yew_19 to just yew, fix version to latestest yew on release
yew_19 = {package="yew", version="0.19"}

[dependencies.web-sys]
version = "0.3"
features = [
    "RequestInit",
    "RequestMode",
    "Request",
    "Window",
    "Response",
    "HtmlHeadElement"
]
optional = true

[features]
# remove me on release
yew-stable = ["yew_19", "yew-interop-macro/yew-stable"]
# remove me on release
yew-next = ["yew_master", "yew-interop-macro/yew-next"]
script = ["wasm-bindgen-futures", "web-sys", "js-sys", "wasm-bindgen", "yew-interop-macro/script"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]