[package]
name = "yew-interop"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "use javascript and css asynchrously in yew"
homepage = "https://github.com/Madoshakalaka/yew-interop"
repository = "https://github.com/Madoshakalaka/yew-interop"
readme = "../README.md"

keywords = ["yew", "interop", "js", "css", "npm"]
categories = ["api-bindings", "asynchronous", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew-interop-macro = "0.3"
# yew-interop-core = "0.2"
yew-interop-macro = {path = "../yew-interop-macro"}
yew-interop-core = {path = "../yew-interop-core"}
yew = "0.19"
wasm-bindgen = {version="0.2", optional=true}
js-sys = {version="0.3", optional=true}
wasm-bindgen-futures = {version="0.4", optional=true}

[dev-dependencies]
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = [
    "RequestInit",
    "RequestMode",
    "Request",
    "Window",
    "Response",
    "HtmlHeadElement"
]
optional = true

[features]
script = ["wasm-bindgen-futures", "web-sys", "js-sys", "wasm-bindgen", "yew-interop-macro/script"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]